Finished simulation documentation.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(rmix)
 export(simulate_concave)
 export(simulate_decreasing)
 export(simulate_increasing)
+export(simulate_linear)
 export(simulate_max)
 export(simulate_rel_change)
 export(simulate_rel_sd)
