--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,4 +9,5 @@ export(simulate_linear)
 export(simulate_max)
 export(simulate_rel_change)
 export(simulate_rel_sd)
+export(simulate_timecourse)
 export(stretch)
